@@ -12,11 +12,11 @@
             
             <include>Animation_FadeIn_Slide</include>
             <control type="image">
-                <width>116</width>
-                <height>116</height>
-                <left>52</left>
-                <top>40</top>
-                <texture flipy="true" colordiffuse="panel_bg" border="24">common/rounded-shadow8.png</texture>
+                <width>216</width>
+                <height>216</height>
+                <left>2</left>
+                <top>-10</top>
+                <texture>common/shadowspot.png</texture>
             </control>
             <control type="image">
                 <left>70</left>
@@ -52,7 +52,7 @@
                         <align>right</align>
                         <font>font_small</font>
                         <aligny>center</aligny>
-                        <width>auto</width>
+                        <width>148</width>
                         <textcolor>main_fg_100</textcolor>
                         <label>$INFO[Player.Volume,  ,    ]</label>
                     </control>
