@@ -1857,134 +1857,4 @@
             </control>
         </definition>
     </include>
-
-
-    <include name="Object_Youtube_Recommended">
-        <control type="group">
-            <bottom>48</bottom>
-            <height>410</height>
-            <include condition="String.IsEmpty(Window(Home).Property(OSDViewMode))">Animation_FadeIn</include>
-            <visible>Control.HasFocus(9605)</visible>
-            <control type="image">
-                <texture colordiffuse="panel_bg">common/white.png</texture>
-            </control>
-            <control type="button">
-                <top>-40</top>
-                <height>40</height>
-                <left>40</left>
-                <textcolor>panel_fg_70</textcolor>
-                <font>font_osd_submenu</font>
-                <width>auto</width>
-                <aligny>center</aligny>
-                <texturenofocus colordiffuse="panel_bg">common/white.png</texturenofocus>
-                <textoffsetx>20</textoffsetx>
-                <label>$LOCALIZE[31073]</label>
-            </control>
-            <control type="group">
-                <animation effect="fade" start="100" end="0" condition="Container(9605).IsUpdating" time="200">Conditional</animation>
-                <control type="wraplist" id="9605">
-                    <visible>String.Contains(Player.Art(thumb),ytimg)</visible>
-                    <orientation>horizontal</orientation>
-                    <onup>Close</onup>
-                    <ondown>Close</ondown>
-                    <focusposition>1</focusposition>
-                    <preloaditems>2</preloaditems>
-                    <itemlayout width="502" height="370">
-                        <control type="group">
-                            <top>20</top>
-                            <left>221</left>
-                            <right>-221</right>
-                            <bottom>-20</bottom>
-                            <control type="image">
-                                <height>300</height>
-                                <bordersize>20</bordersize>
-                                <texture background="true">$INFO[ListItem.Icon]</texture>
-                            </control>
-                            <control type="label">
-                                <textcolor>panel_fg_70</textcolor>
-                                <label>$INFO[ListItem.Label]</label>
-                                <top>300</top>
-                                <height>30</height>
-                                <left>20</left>
-                                <right>20</right>
-                                <font>font_tiny</font>
-                            </control>
-                            <control type="label">
-                                <textcolor>panel_fg_70</textcolor>
-                                <label>$INFO[ListItem.Premiered]</label>
-                                <top>340</top>
-                                <height>30</height>
-                                <left>20</left>
-                                <right>20</right>
-                                <font>font_tiny</font>
-                            </control>
-                            <control type="label">
-                                <textcolor>panel_fg_70</textcolor>
-                                <label>$INFO[ListItem.Label2]</label>
-                                <top>340</top>
-                                <height>30</height>
-                                <left>20</left>
-                                <right>20</right>
-                                <font>font_tiny</font>
-                                <align>right</align>
-                            </control>
-                        </control>
-                    </itemlayout>
-                    <focusedlayout width="502" height="370">
-                        <control type="group">
-                            <top>20</top>
-                            <left>221</left>
-                            <right>-221</right>
-                            <bottom>-20</bottom>
-                            <control type="image">
-                                <height>300</height>
-                                <bordersize>20</bordersize>
-                                <texture background="true">$INFO[ListItem.Icon]</texture>
-                            </control>
-                            <control type="group">
-                                <left>10</left>
-                                <right>10</right>
-                                <top>10</top>
-                                <height>280</height>
-                                <include>View_Selectbox</include>
-                            </control>
-                            <control type="label">
-                                <textcolor>panel_fg_100</textcolor>
-                                <label>$INFO[ListItem.Label]</label>
-                                <top>300</top>
-                                <height>30</height>
-                                <left>20</left>
-                                <right>20</right>
-                                <font>font_tiny</font>
-                            </control>
-                            <control type="label">
-                                <textcolor>panel_fg_100</textcolor>
-                                <label>$INFO[ListItem.Premiered]</label>
-                                <top>340</top>
-                                <height>30</height>
-                                <left>20</left>
-                                <right>20</right>
-                                <font>font_tiny</font>
-                            </control>
-                            <control type="label">
-                                <textcolor>panel_fg_100</textcolor>
-                                <label>$INFO[ListItem.Label2]</label>
-                                <top>340</top>
-                                <height>30</height>
-                                <left>20</left>
-                                <right>20</right>
-                                <font>font_tiny</font>
-                                <align>right</align>
-                            </control>
-                        </control>
-                    </focusedlayout>
-                    <content>plugin://plugin.video.youtube/special/related_videos/?video_id=$INFO[Window(Home).Property(ThumbSplit2)]</content>
-                </control>
-            </control>
-            <control type="group">
-                <include>Defs_BusySpinner</include>
-                <visible>Container(9605).IsUpdating</visible>
-            </control>
-        </control>
-    </include>
 </includes>
