@@ -6,6 +6,7 @@ Add studio logo to videoinfo
 Fix for images/extras showing in plugins
 Prefer fanart for landscape widgets toggle
 Fix for title length
+Change to shadow for volumebar
 
 [B]0.9.12[/B]
 LEIA - Fix for scrollbars
